--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ addons:
     - python-virtualenv
 
 script:
-- flake8 demo
 - virtualenv --no-site-packages .
-- bin/pip install 'pip==8.1.2' 'setuptools==27.1.2'
+- bin/pip install 'pip==8.1.2'
 - bin/pip install flake8
 - bin/flake8 demo
